--- a/index.html
+++ b/index.html
@@ -1074,8 +1074,10 @@
                     <p>Generate secure random numbers and passwords</p>
                     <a href="Random Password Generator Tool.html" class="tool-button">Use Tool</a>
                 </div>
+
+		    
                 <!-- Contact Section -->
-        <section class="contact-section" id="contact">
+        <section class="contact-section">
             <div class="container">
                 <h2 class="section-title">Get In Touch</h2>
                 <div class="contact-content">
