--- a/index.html
+++ b/index.html
@@ -1077,8 +1077,9 @@
 
 		    
                 <!-- Contact Section -->
-        <section class="contact-section">
+        <section class="contact-section" id="contact">>
             <div class="container">
+		    <div class="section-header">
                 <h2 class="section-title">Get In Touch</h2>
                 <div class="contact-content">
                     <div class="contact-info">
