--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
                                     </div>
                                     <div class="contact-text">
                                         <small>Mail</small>
-                                        <strong>iacsccenter@gmail.com</strong>
+                                        <strong>pdfmaster.fun@gmail.com</strong>
                                     </div>
                                 </div>
                             </div>
