--- a/index.html
+++ b/index.html
@@ -1080,6 +1080,10 @@
         <section class="contact-section" id="contact">>
             <div class="container">
 		    <div class="section-header">
+			    <div class="tool-card">
+                    <div class="tool-icon-container">
+                        <i class="fas fa-random"></i>
+                    </div>
                 <h2 class="section-title">Get In Touch</h2>
                 <div class="contact-content">
                     <div class="contact-info">
