Update Term & Conditions.html

--- a/Term & Conditions.html
+++ b/Term & Conditions.html
@@ -25,7 +25,7 @@
   <p>Effective Date: <strong>26 July 2025</strong></p>
 
   <h2>1. Introduction</h2>
-  <p>Welcome to <strong>IACSC - Tools Hub</strong>. By accessing our website at <a href="https://pdfmaster.fun">/</a>, you agree to these Terms and Conditions. Please read them carefully before using any tools provided.</p>
+  <p>Welcome to <strong>IACSC - Tools Hub</strong>. By accessing our website at <a href="https://pdfmaster.fun">https://pdfmaster.fun</a>, you agree to these Terms and Conditions. Please read them carefully before using any tools provided.</p>
 
   <h2>2. Use of Website</h2>
   <p>All tools are free to use and run entirely in your browser. You may use the tools for personal, educational, or commercial purposes, but you agree not to misuse the services or disrupt their functionality.</p>
@@ -43,4 +43,5 @@
   <p>For any queries, email us at: <a href="mailto:pdfmaster.fun@gmail.com">pdfmaster.fun@gmail.com</a></p>
 </body>
 </html>
+
 
